Changes to make the Project Independant and so others can use it with some ease

--- a/Lua.vcxproj
+++ b/Lua.vcxproj
@@ -259,7 +259,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <OutDir>$(SolutionDir)bin\$(Configuration)\Server\plugin\</OutDir>
+    <OutDir>$(SolutionDir)bin\$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <OutDir>$(SolutionDir)bin\$(Configuration)\Server\32\plugin\</OutDir>
@@ -268,7 +268,7 @@
     <OutDir>$(SolutionDir)bin\$(Configuration)\Server\32\plugin\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <OutDir>$(SolutionDir)bin\$(Configuration)\Server\plugin\</OutDir>
+    <OutDir>$(SolutionDir)bin\$(Configuration)\</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -297,7 +297,8 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <AdditionalOptions>Server.Launcher.lib </AdditionalOptions>
-      <AdditionalLibraryDirectories>$(SolutionDir)bin\$(Configuration)\Server</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)\lib\$(Configuration)\;$(ProjectDir)lib\;</AdditionalLibraryDirectories>
+      <AdditionalDependencies>Server.lib;libmysql64.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -335,8 +336,8 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalOptions>Server.lib </AdditionalOptions>
-      <AdditionalLibraryDirectories>$(SolutionDir)bin\$(Configuration)\Server;$(SolutionDir)\lib\$(Configuration)\;$(ProjectDir)lib\;</AdditionalLibraryDirectories>
-      <AdditionalDependencies>libmysql64.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)\lib\$(Configuration)\;$(ProjectDir)lib\;</AdditionalLibraryDirectories>
+      <AdditionalDependencies>Server.lib;libmysql64.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
